Implement interaction with Rekoder api